# github-profile-kit

./: .markdownlint.json  .pre-commit-config.yaml  404.html  CNAME  README.md  config.yaml  index.html  mkdocs.yml  pyproject.toml  sample.env
.github/workflows/: mkdocs_publish.yml  update.yml
blocks/: about.md  extra_content.md
blocks/about/: index.html
blocks/banner/: index.html
blocks/social/: index.html
docs/: index.md
docs/blocks/: about.md  banner.md  social.md
docs/getting-started/: config.md  secrets.md  setup.md
getting-started/config/: index.html
getting-started/secrets/: index.html
getting-started/setup/: index.html
schema/: config.schema.json
search/: search_index.json
src/: config_loader.py  main.py  readme_generator.py  template_renderer.py  utils.py
src/blocks/: blog.py  youtube.py
templates/: about.md  badges.md  banner.md  blog.md  custom.md  social.md  youtube.md
